Apps_deployment/Authentication-Group/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: app-services
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      imagePullSecrets:
      - name: my-registry-creds
      containers:
      - name: auth-service
        image: ${IP_ADDRESS}:5000/auth-service:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP 
        resources: 
          requests:
            cpu: "100m"
            memory: "128Mi"
        livenessProbe: 
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: / 
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
